--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4554,6 +4554,9 @@ body {
 .cid-rdapkAV7ir H2 {
   color: #cc2952;
 }
+.cid-rdapkAV7ir P {
+  text-align: left;
+}
 .cid-rdglp6tN1R {
   padding-top: 0px;
   padding-bottom: 0px;
