--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2175,6 +2175,103 @@ body {
 .cid-r6vAKye4uP .mbr-section-btn B {
   color: #ffffff;
 }
+.cid-rdKpPbEoOe {
+  padding-top: 0px;
+  padding-bottom: 45px;
+  background-color: #2e2e2e;
+}
+.cid-rdKpPbEoOe .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-rdKpPbEoOe .number-wrap {
+  color: #ffffff;
+  border-color: rgba(255, 255, 255, 0.15);
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
+}
+.cid-rdKpPbEoOe .number {
+  font-style: normal;
+  font-weight: 700;
+  text-transform: none;
+  letter-spacing: -2px;
+  font-size: 55px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #ffffff;
+}
+.cid-rdKpPbEoOe .period {
+  display: block;
+  padding-top: 2px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.cid-rdKpPbEoOe .dot {
+  position: absolute;
+  top: -10px;
+  right: -1em;
+  width: 1em;
+  display: block;
+  font-size: 55px;
+  height: 83%;
+  overflow: hidden;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 89.65px;
+  text-transform: none;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #ffffff;
+}
+.cid-rdKpPbEoOe .countdown-cont {
+  background: linear-gradient(45deg, #ffc80f, #ff3366);
+  max-width: 700px;
+  border-radius: 3px;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rdKpPbEoOe .dot {
+    display: none;
+  }
+  .cid-rdKpPbEoOe .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+    max-width: 25%;
+    flex: 0 0 25%;
+  }
+  .cid-rdKpPbEoOe .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 576px) {
+  .cid-rdKpPbEoOe .row {
+    flex-wrap: nowrap;
+  }
+  .cid-rdKpPbEoOe .number {
+    white-space: nowrap;
+  }
+}
+@media (max-width: 440px) {
+  .cid-rdKpPbEoOe .number {
+    font-size: 30px;
+  }
+  .cid-rdKpPbEoOe .period {
+    font-size: 0.8rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rdKpPbEoOe .number {
+    font-size: 20px;
+  }
+  .cid-rdKpPbEoOe .period {
+    font-size: 0.6rem;
+  }
+}
 .cid-r6vHcoZFOZ {
   padding-top: 15px;
   padding-bottom: 0px;
@@ -4586,7 +4683,7 @@ body {
   text-align: center;
 }
 .cid-rdglp6tN1R .section-text B {
-  color: #ffc80f;
+  color: #ff3366;
 }
 .cid-rdghU5t03X {
   padding-top: 0px;
@@ -4683,9 +4780,10 @@ body {
 }
 .cid-rdgjGWuyN2 .mbr-text {
   text-align: center;
+  color: #efefef;
 }
 .cid-rdgjGWuyN2 .mbr-text B {
-  color: #ffc80f;
+  color: #efefef;
 }
 .cid-rdapkMxmkI {
   padding-top: 15px;
@@ -4786,6 +4884,9 @@ body {
   color: #efefef;
 }
 .cid-rdapkQI95V .mbr-text B {
+  color: #ff3366;
+}
+.cid-rdapkQI95V .mbr-text U {
   color: #ff3366;
 }
 .cid-rdapkYZYsi {
